--- a/web/index.html
+++ b/web/index.html
@@ -20,20 +20,20 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="/public/">Аналитический портал</a>
+      <a class="navbar-brand" href="/web/">Аналитический портал</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/public/">Главная</a>
+            <a class="nav-link" href="/web/">Главная</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/public/categories.html">Категории</a>
+            <a class="nav-link" href="/web/categories.html">Категории</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/public/favorites.html">Избранное</a>
+            <a class="nav-link" href="/web/favorites.html">Избранное</a>
           </li>
         </ul>
       </div>
@@ -43,7 +43,7 @@
   <div class="container mt-4">
     <h1>Последние статьи</h1>
     <div class="row" id="posts-container">
-      <!-- Посты будут добавлены через JavaScript -->
+       
     </div>
   </div>
 
